# SyncTrigger

./: .gitignore  CMakeLists.txt  README.md  dataBuffer.h  dataBuffer_base.h  synchronizer.h  test_dataBuffer.cpp  test_synchronizer.cpp
examples/: camera_imu_sync.cpp  test_dataBuffer.cpp  test_synchronizer.cpp
include/: buffer.h  bufferManager.h  buffer_base.h  buffer_traits.h  dataBuffer.h  dataBuffer_base.h  plot_drawer.h  sensorType.h  spinLock.h  statistical_analyzer.h  storagePolicy.h  synchronizer.h
src/: statistical_analyzer.cpp
tests/: CMakeLists.txt
tests/unit/: test_buffer.cpp
